--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=keorapetseleballo
+spring.datasource.url=jdbc:h2:mem:categories
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+spring.h2.console.enabled=true
+#JPA schema creation
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
